# Ramen-os

./: GNUmakefile  README.md  limine.conf
kernel/: Cargo.toml  kernel
kernel/src/: entry_type.rs  log.rs  main.rs  makros.rs  psf_font.rs  utils.rs
ovmf/: ovmf-vars-x86_64.fd
