[package]
name = "ramen-os"
version = "0.1.0"
edition = "2024"

[dependencies]
heapless = "0.8.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.4"
spin = "0.10.0"
uart_16550 = "0.3.2"
x86_64 = "0.15.2"

[features]
test-mode = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
